crates/nx-syntax/tests/fixtures/valid/component-emits.nx
component <SearchBox
  placeholder:string
  emits {
    ValueChanged {
      value:string
      source:string
    }
    SearchRequested {
      searchString:string
    }
  }
/> = {
  <TextInput placeholder={placeholder} />
}
