crates/nx-syntax/tests/fixtures/invalid/component-invalid-emits.nx
component <SearchBox
  emits ValueChanged {
    value:string
  }
/> = {
  <TextInput />
}
